--- a/.gitmodules
+++ b/.gitmodules
@@ -53,3 +53,6 @@
 [submodule "bundle/tmux-navigator"]
 	path = bundle/tmux-navigator
 	url = https://github.com/christoomey/vim-tmux-navigator
+[submodule "bundle/obsession"]
+	path = bundle/obsession
+	url = git://github.com/tpope/vim-obsession.git
